use .toList()
Signed-off-by: Benjamin Seber <benjamin.seber@mailbox.org>